Compila con 'mvn -DskipTest clean compile spotbugs:spotbugs